<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Cloudcog</string>
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="secure_connect">Connect to OBD-II Adapter</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="developedby">Developed By: Ryan James Cristobal and Jonathan Luong</string>
    <string name="MPH">MPH</string>
    <string name="RPM">RPM</string>
    <string name="CIA">Intake Air Temperature</string>
    <string name="CT">Coolant Temperature</string>
    <string name="load">Engine Load</string>
    <string name="OT">Oil Temperature</string>
    <string name="zero">0</string>
    <string name="getdata">Get Vehicle Operating Data</string>
    <string name="getcodes">Check Trouble Codes</string>
    <string name="logo">Application Logo</string>
    <string name="voltage" formatted="false">volts</string>
    <string name="TX">TX: </string>
    <string name="RX">RX: </string>
    <string name="blank"></string>
    <string name="found">Trouble Codes Found:</string>
    <string name="erasecodes">Clear Trouble Codes</string>
    <string name="nocodesfound">No Trouble Codes Found!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="address">Address:</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="latlng">Lat/Long:</string>
    <string name="unknown">--Unknown--</string>
    <string name="not_support_gps">GPS provider not supported</string>
    <string name="not_support_network">Network provider not supported</string>
    <string name="use_fine_provider">Fine-grain provider</string>
    <string name="use_both_providers">Both providers</string>
    <string name="app_full_name" formatted="false">BatteryBot Pro</string>
    <string name="app_launcher_name" formatted="false">BatteryBot</string>
    <string name="settings_activity_subtitle" formatted="false">Settings</string>
    <string name="help_activity_subtitle" formatted="false">Help</string>
    <string name="log_view_activity_subtitle" formatted="false">Logs</string>
    <string name="app_full_name_free" formatted="false">BatteryBot</string>
    <string name="battery_use_b" formatted="false">View Battery Use</string>
    <string name="upgrade_donate_b" formatted="false">Upgrade/Donate...</string>
    <string name="reenable_lock_screen" formatted="false">Reenable Lock Screen</string>
    <string name="disable_lock_screen" formatted="false">Disable Lock Screen</string>
    <string name="confirm_disable" formatted="false">Really disable lock screen?</string>
    <string name="confirm_disable_hint" formatted="false">    Hint: Disable this confirmation dialog in the settings...</string>
    <string name="yes" formatted="false">Yes</string>
    <string name="cancel" formatted="false">Cancel</string>
    <string name="confirm_close" formatted="false">Really Close?</string>
    <string name="confirm_close_hint" formatted="false">Phone battery monitoring background service will be completely closed, and you won\'t see it
    in your status bar any more.\n

    \nIf you just want to leave the main window and keep the indicator
    running, press Cancel and then just press your device\'s BACK
    button to leave the main window.</string>
    <string name="menu_settings" formatted="false">Settings</string>
    <string name="menu_close" formatted="false">Close</string>
    <string name="menu_help" formatted="false">Help</string>
    <string name="menu_rate_and_review" formatted="false">Rate &amp; Review</string>
    <string name="menu_clear" formatted="false">Clear</string>
    <string name="menu_reverse" formatted="false">Reverse Order</string>
    <string name="menu_log_filter" formatted="false">Filter</string>
    <string name="menu_export" formatted="false">Export CSV</string>
    <string name="pref_hint" formatted="false">Hint: Press MENU for help.</string>
    <string name="notification_settings" formatted="false">Main Notification</string>
    <string name="notification_settings_summary" formatted="false">Configure the main notification</string>
    <string name="status_bar_icon_settings" formatted="false">Status Bar Icon</string>
    <string name="status_bar_icon_settings_summary" formatted="false">Control icon sets</string>
    <string name="keyguard_settings" formatted="false">Lock Screen</string>
    <string name="keyguard_settings_summary" formatted="false">Configure the feature to disable the lock screen</string>
    <string name="alarm_settings" formatted="false">Alarms</string>
    <string name="alarm_settings_summary" formatted="false">Control notifications for low/full battery</string>
    <string name="other_settings" formatted="false">Other Settings</string>
    <string name="pref_cat_icon_set" formatted="false">Icon Set</string>
    <string name="pref_icon_set" formatted="false">Icon Set</string>
    <string name="pref_cat_charging_indicator" formatted="false">Charging Indicator</string>
    <string name="pref_indicate_charging" formatted="false">Indicate Charging</string>
    <string name="pref_indicate_charging_summary" formatted="false">Alter icon to indicate when charging?</string>
    <string name="pref_cat_logging" formatted="false">Logging</string>
    <string name="pref_enable_logging" formatted="false">Enable Logging</string>
    <string name="pref_enable_logging_summary" formatted="false">Log battery state changes?</string>
    <string name="pref_max_log_age" formatted="false">Maximum Log Age</string>
    <string name="pref_max_log_age_summary" formatted="false">Delete logs older than:</string>
    <string name="pref_cat_keyguard" formatted="false">Lock Screen / Keyguard</string>
    <string name="pref_notify_when_kg_disabled" formatted="false">Notify When Disabled</string>
    <string name="pref_notify_when_kg_disabled_summary" formatted="false">Indicate when lock screen is disabled? </string>
    <string name="pref_confirm_manual_disable" formatted="false">Confirm Manual Disable</string>
    <string name="pref_confirm_manual_disable_summary" formatted="false">Confirm when manually disabling lock screen?</string>
    <string name="pref_finish_after_toggle_lock" formatted="false">Exit After Toggling</string>
    <string name="pref_finish_after_toggle_lock_summary" formatted="false">Exit main window immediately after dis/reenabling?</string>
    <string name="pref_auto_disable" formatted="false">Auto-disable Lock Screen</string>
    <string name="pref_auto_disable_summary" formatted="false">Disable the lock screen when charging?</string>
    <string name="pref_disallow_disable_lock_screen" formatted="false">Disallow Manual Disable</string>
    <string name="pref_disallow_disable_lock_screen_summary" formatted="false">Disallow use of the disable lock screen button?</string>
    <string name="pref_cat_battery_use" formatted="false">Battery Use</string>
    <string name="pref_finish_after_battery_use" formatted="false">Exit After Launching</string>
    <string name="pref_finish_after_battery_use_summary" formatted="false">Exit main window immediately after launching Battery Use?</string>
    <string name="pref_cat_temperature_unit" formatted="false">Temperature Unit</string>
    <string name="pref_convert_to_fahrenheit" formatted="false">Convert to Fahrenheit</string>
    <string name="pref_cat_autostart" formatted="false">Autostart</string>
    <string name="pref_autostart_at_boot" formatted="false">Autostart at Boot</string>
    <string name="pref_autostart_at_boot_summary" formatted="false">Start BatteryBot when device boots:</string>
    <string name="pref_cat_plugin_settings" formatted="false">Plugin Settings</string>
    <string name="pref_plugin_settings" formatted="false">Plugin Settings</string>
    <string name="pref_plugin_settings_summary" formatted="false">Edit settings for this plugin</string>
    <string name="pref_cat_color" formatted="false">Icon Color</string>
    <string name="pref_color_preview" formatted="false">Color Preview</string>
    <string name="pref_red" formatted="false">Use Red Icon</string>
    <string name="pref_red_summary" formatted="false">Use red icon when charge is low?</string>
    <string name="pref_red_thresh" formatted="false">Red Threshold</string>
    <string name="pref_red_thresh_summary" formatted="false">Red icon below what charge percentage:</string>
    <string name="pref_amber" formatted="false">Use Amber Icon</string>
    <string name="pref_amber_summary" formatted="false">Use amber icon when charge is medium?</string>
    <string name="pref_amber_thresh" formatted="false">Amber Threshold</string>
    <string name="pref_amber_thresh_summary" formatted="false">Amber icon below what charge percentage:</string>
    <string name="pref_green" formatted="false">Use Green Icon</string>
    <string name="pref_green_summary" formatted="false">Use green icon when charge is high?</string>
    <string name="pref_green_thresh" formatted="false">Green Threshold</string>
    <string name="pref_green_thresh_summary" formatted="false">Green icon at or above what charge percentage:</string>
    <string name="pref_ten_percent_mode" formatted="false">10% Mode</string>
    <string name="pref_ten_percent_mode_summary" formatted="false">Read the help first!</string>
    <string name="pref_alarm_enabled" formatted="false">Enable Alarm</string>
    <string name="pref_cat_alarm_conditions" formatted="false">Alarm Conditions</string>
    <string name="pref_alarm_type" formatted="false">Alarm Type</string>
    <string name="pref_alarm_type_summary" formatted="false">Trigger alarm when battery:</string>
    <string name="pref_alarm_threshold" formatted="false">Threshold</string>
    <string name="pref_alarm_threshold_summary" formatted="false">Alarm threshold:</string>
    <string name="pref_cat_notification_settings" formatted="false">Notification Settings</string>
    <string name="pref_alarm_ringtone" formatted="false">Ringtone</string>
    <string name="pref_alarm_vibrate" formatted="false">Vibrate</string>
    <string name="pref_alarm_lights" formatted="false">Flash Lights</string>
    <string name="nfc_broadcast">NFC Broadcast</string>
    <string name="location">Location</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi">Wifi</string>
    <string name="usb_debugging">USB Debugging</string>
    <string name="connections_handling">Connections Handling</string>
    <string name="cosm_push">Cosm Push</string>
    <string name="cosm_pull">Cosm Pull</string>
    <string name="xively_web_link">Xively Weblink</string>
    <string name="cloud_services">Cloud Services</string>
    <string name="preferences">Preferences</string>
    <string name="ruby_dark_style">Ruby Dark Style</string>
</resources>