<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:enabled="false"
        android:layout="@layout/hint"
        android:selectable="false"
        android:title="@string/pref_hint" />
    <Preference
        android:enabled="false"
        android:layout="@layout/divider_after_hint"
        android:selectable="false" />
    <Preference
        android:key="notification_settings"
        android:summary="@string/notification_settings_summary"
        android:title="@string/notification_settings" />
    <Preference
        android:key="status_bar_icon_settings"
        android:summary="@string/status_bar_icon_settings_summary"
        android:title="@string/status_bar_icon_settings" />
    <Preference
        android:key="keyguard_settings"
        android:summary="@string/keyguard_settings_summary"
        android:title="@string/keyguard_settings" />
    <Preference
        android:key="alarms_settings"
        android:summary="@string/alarm_settings_summary"
        android:title="@string/alarm_settings" />
    <Preference
        android:key="other_settings"
        android:title="@string/other_settings" />

</PreferenceScreen>