<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:enabled="false"
        android:layout="@layout/hint"
        android:selectable="false"
        android:title="@string/pref_hint" />

    <PreferenceCategory android:title="@string/pref_cat_logging" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_logging"
            android:summary="@string/pref_enable_logging_summary"
            android:title="@string/pref_enable_logging" />

        <ListPreference
            android:defaultValue="@string/default_max_log_age"
            android:dialogTitle="@string/pref_max_log_age_summary"
            android:entries="@array/max_log_age_entries"
            android:entryValues="@array/max_log_age_values"
            android:key="max_log_age"
            android:title="@string/pref_max_log_age" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_battery_use" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="finish_after_battery_use"
            android:summary="@string/pref_finish_after_battery_use_summary"
            android:title="@string/pref_finish_after_battery_use" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_temperature_unit" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="convert_to_fahrenheit"
            android:title="@string/pref_convert_to_fahrenheit" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_autostart" >
        <ListPreference
            android:defaultValue="auto"
            android:dialogTitle="@string/pref_autostart_at_boot_summary"
            android:entries="@array/boot_pref_entries"
            android:entryValues="@array/boot_pref_values"
            android:key="autostart"
            android:title="@string/pref_autostart_at_boot" />
    </PreferenceCategory>

    <!--
  PreferenceCategory android:title="@string/pref_cat_language">
    <ListPreference
       android:key="language_override"
       android:title="@string/pref_language_override"
       android:entryValues="@array/lang_values"
       android:dialogTitle="@string/pref_language_override_summary"
       android:defaultValue="default"
    />
  </PreferenceCategory
    -->

</PreferenceScreen>