<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/phone_preferences"
        android:orderInCategory="300"
        android:title="@string/preferences">
        <menu>
        </menu>
    </item>
    <item
        android:id="@+id/action_ruby_gauges"
        android:icon="@drawable/action_ruby_gauges"
        android:showAsAction="always"
        android:title="@string/ruby_dark_style"/>
    <item
        android:id="@+id/cloud_services"
        android:icon="@drawable/action_cloud_services"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/cloud_services">
        <menu>
            <item
                android:id="@+id/action_cosm_web"
                android:icon="@drawable/action_cosm_web"
                android:title="@string/cosm_web"/>
            <item
                android:id="@+id/action_cosm_pull"
                android:icon="@drawable/action_cosm_pull"
                android:title="@string/cosm_pull"/>
            <item
                android:id="@+id/action_cosm_push"
                android:icon="@drawable/action_cosm_push"
                android:title="@string/cosm_push"/>
        </menu>
    </item>
    <item
        android:id="@+id/conection_settings"
        android:icon="@drawable/action_connections_handling"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/connections_handling">
        <menu>
            <item
                android:id="@+id/secure_connect_scan"
                android:icon="@drawable/action_bluetooth"
                android:showAsAction="always"
                android:title="@string/secure_connect"/>
            <item
                android:id="@+id/action_nfc"
                android:icon="@drawable/action_nfc"
                android:showAsAction="always"
                android:title="@string/nfc_broadcast"/>
            <item
                android:id="@+id/action_location"
                android:icon="@drawable/action_location_settings"
                android:showAsAction="always"
                android:title="@string/location"/>
            <item
                android:id="@+id/action_bluetooth"
                android:icon="@drawable/action_bluetooth"
                android:showAsAction="always"
                android:title="@string/bluetooth"/>
            <item
                android:id="@+id/action_wifi"
                android:icon="@drawable/action_wifi"
                android:showAsAction="always"
                android:title="@string/wifi"/>
            <item
                android:id="@+id/action_usb"
                android:icon="@drawable/action_usb"
                android:showAsAction="always"
                android:title="@string/usb_debugging"/>
        </menu>
    </item>

</menu>