<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_geolocation"
        android:icon="@drawable/action_geolocation"
        android:showAsAction="always"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@+android:drawable/ic_menu_help"
        android:showAsAction="never"
        android:title="@string/menu_help"/>
    <item
        android:id="@+id/cloud_services"
        android:icon="@drawable/action_cloud_services"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="Cloud Services">
        <menu>
            <item
                android:id="@+id/action_cosm_web"
                android:icon="@drawable/action_xively_weblink"
                android:title="@string/xively_web_link"/>
            <item
                android:id="@+id/action_cosm_pull"
                android:icon="@drawable/action_xively_pull"
                android:title="@string/cosm_pull"/>
            <item
                android:id="@+id/action_cosm_push"
                android:icon="@drawable/action_xively_push"
                android:title="@string/cosm_push"/>
        </menu>
    </item>
    <item
        android:id="@+id/conection_settings"
        android:icon="@drawable/action_connections_handling"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="Connections Handling">
        <menu>
            <item
                android:id="@+id/action_nfc"
                android:icon="@drawable/action_nfc"
                android:showAsAction="always"
                android:title="@string/nfc_broadcast"/>
            <item
                android:id="@+id/action_location"
                android:icon="@drawable/action_location_settings"
                android:showAsAction="always"
                android:title="@string/location"/>
            <item
                android:id="@+id/action_bluetooth"
                android:icon="@drawable/action_bluetooth"
                android:showAsAction="always"
                android:title="@string/bluetooth"/>
            <item
                android:id="@+id/action_wifi"
                android:icon="@drawable/action_wifi"
                android:showAsAction="always"
                android:title="@string/wifi"/>
            <item
                android:id="@+id/action_usb"
                android:icon="@drawable/action_usb"
                android:showAsAction="always"
                android:title="@string/usb_debugging"/>
        </menu>
    </item>

</menu>