<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_log_filter"
        android:icon="@+android:drawable/ic_menu_view"
        android:showAsAction="never"
        android:title="@string/menu_log_filter"/>
    <item
        android:id="@+id/menu_reverse"
        android:icon="@+android:drawable/ic_menu_revert"
        android:showAsAction="never"
        android:title="@string/menu_reverse"/>
    <item
        android:id="@+id/menu_export"
        android:icon="@+android:drawable/ic_menu_save"
        android:showAsAction="never"
        android:title="@string/menu_export"/>
    <item
        android:id="@+id/menu_clear"
        android:icon="@+android:drawable/ic_menu_delete"
        android:showAsAction="never"
        android:title="@string/menu_clear"/>

</menu>