<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:icon="@+android:drawable/ic_menu_preferences"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@+android:drawable/ic_menu_help"
        android:showAsAction="never"
        android:title="@string/menu_help"/>
    <item
        android:id="@+id/menu_rate_and_review"
        android:icon="@+android:drawable/btn_star_big_off"
        android:showAsAction="never"
        android:title="@string/menu_rate_and_review"/>
    <item
        android:id="@+id/menu_close"
        android:icon="@+android:drawable/ic_menu_close_clear_cancel"
        android:showAsAction="never"
        android:title="@string/menu_close"/>

</menu>